# modern_etl_weather

./: .env.example  README.md  docker-compose.yml  pyproject.toml
dags/: extract_dags.py  transform_dag.py
src/: extract.py  load_to_greenplum.py  transform.py
utils/: click_init.sql  init.sql
