[project]
name = "weather_etl"
version = "1.0.0"
description = "Modern ETL pipeline for the weather data"
authors = [
    {name = "Artem1s1337",email = "artem1smodin@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12, <3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "apache-airflow (>=3.1.6,<4.0.0)",
    "clickhouse-driver (>=0.2.10,<0.3.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "pyowm (>=3.5.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
